# FitnessJournal

./: .env  .env.example  .gitignore  .gitleaksignore  CLAUDE.md  Cargo.toml  Dockerfile  Fitness.toml  Garmin Exercises Database - Exercises.csv  INSTALL_DUMMIES.md  README.md  docker-compose.yml  generated_workouts.json  profiles.json
dashboard/: Dockerfile  README.md  middleware.ts  package-lock.json  package.json
dashboard/src/app/: AnalyzeButton.tsx  AnalyzeUpcomingButton.tsx  AnimationProvider.tsx  Chat.tsx  ChatFab.tsx  CreateCourseButton.tsx  ForcePullButton.tsx  GenerateButton.tsx  MuscleMap.tsx  ReadinessRing.tsx  RecoveryHistoryChart.tsx  WeeklyCalendar.tsx  globals.css  layout.tsx  page.tsx
dashboard/src/app/api/[...path]/: route.ts
dashboard/src/app/settings/: page.tsx
scripts/: create_workout.py  delete_workouts.py  garmin_fetch.py  publish-preflight.sh  test_inspect_sets.py
src/: ai_client.rs  api.rs  bot.rs  coaching.rs  config.rs  db.rs  garmin_api.rs  garmin_client.rs  garmin_login.rs  grafana_client.rs  main.rs  models.rs  workout_builder.rs
