[package]
name = "fitness_journal"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
dotenv = "0.15"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tokio-tungstenite = "0.28.0"
futures-util = "0.3.32"
