[package]
name = "fitness_journal"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
dotenvy = "0.15"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tokio-tungstenite = "0.28.0"
futures-util = "0.3.32"
oauth1-request = { version = "0.6.1", default-features = false, features = ["hmac-sha1", "std"] }
csv = "1.4.0"
regex = "1.12.3"
lazy_static = "1.5.0"
rpassword = "7.4.0"
url = "2.5.8"
strsim = "0.11.1"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
